k8s/backend-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-poc
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend
      version: v2

  template:
    metadata:
      labels:
        app: backend
        version: v2

    spec:
      containers:
      - name: backend
        image: 858986859635.dkr.ecr.eu-north-1.amazonaws.com/test/poc-repo:backend-latest # 🔴 replace this
        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
