k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: app-gateway
  namespace: devops-poc

spec:
  selector:
    istio: ingressgateway

  servers:

  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "payal-eks-demo.online"

    tls:
      httpsRedirect: true

  - port:
      number: 443
      name: https
      protocol: HTTPS

    tls:
      mode: SIMPLE
      credentialName: payal-eks-demo-tls

    hosts:
    - "payal-eks-demo.online"
