k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: devops-poc
spec:
  hosts:
  - "payal-eks-demo.online"

  gateways:
  - app-gateway

  http:

  - match:
    - uri:
        prefix: /api

    route:
    - destination:
        host: backend-service
        port:
          number: 5000

  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: frontend-service
        port:
          number: 80
